--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash && ./node_modules/.bin/jsdoc ./server -r -d docs",
-    "start": "nodemon --ignore node_modules server",
+    "start": "node server/index.js",
     "test": "mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
